--- a/package.json
+++ b/package.json
@@ -5,25 +5,38 @@
   "private": true,
   "author": "Vladislav Nikolaev",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node start.js development",
+    "build": "node start.js build",
+    "start": "node start.js production",
+    "proxy": "node startProxy.js"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
+    "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "next": "^12.1.6",
+    "next-translate": "^1.4.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.3",
+    "react-query": "^3.39.1",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.36",
+    "@types/react": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
+    "sass": "^1.52.1",
     "typescript": "^4.7.2"
   }
 }
