--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
+    "@react-hook/resize-observer": "^1.2.5",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "color-blend": "^4.0.0",
+    "lazy-brush": "^1.0.1",
     "next": "^12.1.6",
     "next-translate": "^1.4.0",
     "react": "^18.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
     "react-query": "^3.39.1",
@@ -28,8 +32,10 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@types/lazy-brush": "^1.0.1",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.10",
+    "@types/react-color": "^3.0.6",
     "@types/throttle-debounce": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
