--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "color-blend": "^4.0.0",
-    "lazy-brush": "^1.0.1",
+    "lazy-brush": "^2.0.1",
     "next": "^12.1.6",
     "next-translate": "^1.4.0",
     "react": "^18.1.0",
@@ -29,10 +29,10 @@
     "react-hook-form": "^7.31.3",
     "react-query": "^3.39.1",
     "throttle-debounce": "^5.0.0",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
-    "@types/lazy-brush": "^1.0.1",
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.10",
     "@types/react-color": "^3.0.6",
