--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "react": "^18.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.1.0",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.31.3",
     "react-query": "^3.39.1",
     "throttle-debounce": "^5.0.0",
     "universal-cookie": "^4.0.4",
-    "use-resize-observer": "^9.1.0"
+    "use-resize-observer": "^9.1.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/node": "^17.0.36",
