--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.1.0",
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.31.3",
+    "react-input-autosize": "^3.0.0",
     "react-query": "^3.39.1",
     "throttle-debounce": "^5.0.0",
     "universal-cookie": "^4.0.4",
@@ -38,6 +39,7 @@
     "@types/node": "^17.0.36",
     "@types/react": "^18.0.10",
     "@types/react-color": "^3.0.6",
+    "@types/react-input-autosize": "^2.2.1",
     "@types/throttle-debounce": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
