--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.0",
+    "@mui/lab": "^5.0.0-alpha.94",
     "@mui/material": "^5.8.1",
     "@react-hook/resize-observer": "^1.2.6",
     "axios": "^0.27.2",
@@ -24,12 +25,13 @@
     "next": "^12.1.6",
     "next-translate": "^1.4.0",
     "react": "^18.1.0",
+    "react-18-input-autosize": "^3.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.1.0",
     "react-draggable": "^4.4.5",
     "react-hook-form": "^7.31.3",
-    "react-input-autosize": "^3.0.0",
     "react-query": "^3.39.1",
+    "reactflow": "^11.7.4",
     "throttle-debounce": "^5.0.0",
     "universal-cookie": "^4.0.4",
     "use-resize-observer": "^9.1.0",
